<resources>
    <string name="app_name">Mi Deporte</string>
    <string name="txtTipo">Tipo:</string>
    <string name="txtIndividual">Individual</string>
    <string name="txtEnPareja">En pareja</string>
    <string name="txtGrupal">Grupal</string>
    <string name="txtDeporte">Deporte:</string>
    <string-array name="spIndividual">
        <item>Salto de altura</item>
        <item>Atletismo</item>
        <item>Gimnasia</item>
    </string-array>
    <string-array name="spEnPareja">
        <item>Pádel</item>
        <item>Tenis</item>
        <item>Squash</item>
    </string-array>
    <string-array name="spGrupal">
        <item>Fútbol</item>
        <item>Rugby</item>
        <item>Balonmano</item>
    </string-array>
</resources>