<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txtTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTipo"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rdgTipo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp">

            <RadioButton
                android:id="@+id/rdbIndividual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/txtIndividual"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rdbEnPareja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/txtEnPareja"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rdbGrupal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/txtGrupal"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/txtDeporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDeporte"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spDeporte"
            android:layout_width="match_parent"

            android:layout_height="48dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            android:scrollbarSize="10dp" />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50dp"
            android:fontFamily="monospace"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="34sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>